k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: ai-task-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: bhardwajsaumya/ai-task-worker:a432be1bfd9ab07691a48bec9bd3354c0dafad1e
          resources:
            requests:
              cpu: "150m"
              memory: "200Mi"
            limits:
              cpu: "400m"
              memory: "400Mi"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 5
